--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-register = { path = "../register", version = "=0.1.0" }
+register = { path = "../register/register", version = "=0.1.0" }
